--- a/app/src/main/res/layout/view_list_child.xml
+++ b/app/src/main/res/layout/view_list_child.xml
@@ -4,25 +4,45 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layoutDirection="ltr">
+    android:layout_height="52dp"
+    android:layoutDirection="ltr"
+    android:minHeight="52dp">
 
     <TextView
 
-        android:id="@+id/view_list_child_text"
+        android:id="@+id/view_list_child_text_centered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:textSize="15sp" />
+        android:layout_centerVertical="true"
+        android:textSize="15sp"
+        android:visibility="gone" />
 
-    <TextView
+    <RelativeLayout
 
-        android:id="@+id/view_list_child_location"
+        android:id="@+id/view_list_child_relative_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/view_list_child_text"
-        android:layout_marginBottom="7dp"
-        android:textSize="12sp" />
+        android:layout_centerVertical="true"
+        android:visibility="gone">
+
+        <TextView
+
+            android:id="@+id/view_list_child_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:visibility="gone" />
+
+        <TextView
+
+            android:id="@+id/view_list_child_teacher_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_list_child_text"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 
     <TextView
 
