--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -91,7 +91,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="28dp"
                     android:layout_toRightOf="@id/add_class_teacher_icon"
-                    android:hint="Teacher"
+                    android:hint="Teacher (Optional)"
                     android:inputType="textCapWords"
                     android:singleLine="true"
                     android:textSize="16sp" />
@@ -104,7 +104,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_below="@id/add_class_teacher_layout"
-                android:layout_marginBottom="6dp"
                 android:paddingBottom="4dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
@@ -128,7 +127,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="28dp"
                     android:layout_toRightOf="@id/add_class_location_icon"
-                    android:hint="Location"
+                    android:hint="Location (Optional)"
                     android:inputType="textCapWords"
                     android:singleLine="true"
                     android:textSize="16sp" />
@@ -140,7 +139,8 @@
                 android:id="@+id/add_class_color_frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/add_class_location_layout" />
+                android:layout_below="@id/add_class_location_layout"
+                android:layout_margin="6dp" />
 
         </RelativeLayout>
 
