--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -38,6 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:visibility="gone">
 
             <RelativeLayout
@@ -52,7 +54,7 @@
 
                     android:id="@+id/overview_current_class_card_header"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="44dp"
                     android:layout_marginBottom="6dp"
                     android:layout_marginTop="14dp">
 
@@ -65,7 +67,7 @@
 
                     <TextView
 
-                        android:id="@+id/overview_current_class_card_location_teacher"
+                        android:id="@+id/overview_current_class_card_teacher_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/overview_current_class_card_title"
@@ -79,7 +81,8 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="0.5dp"
-                        android:src="@drawable/color_indicator_class_card" />
+                        android:src="@drawable/color_indicator_class_card"
+                        android:translationY="-0.5dp" />
 
                 </RelativeLayout>
 
