--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,7 +17,6 @@
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fillViewport="true"
         android:scrollbars="none">
@@ -26,7 +25,9 @@
 
             android:id="@+id/settings_frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:scrollbars="none" />
 
     </ScrollView>
 
