--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -39,9 +39,9 @@
         <CheckBoxPreference
 
             android:defaultValue="true"
-            android:key="mute_phone_during_class"
-            android:summary="Turns vibrate only mode on during classes"
-            android:title="Mute phone during classes" />
+            android:key="vibrate_only_during_classes"
+            android:summary="Vibrate only unless silent mode is on"
+            android:title="Vibrate only during classes" />
 
     </PreferenceCategory>
 
