Removed unnecessary root layout tags, improved homework sorting and display.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,7 @@
     android:id="@+id/main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="16dp"
-    android:fitsSystemWindows="true">
+    android:elevation="16dp">
 
     <LinearLayout
 
@@ -45,6 +44,7 @@
                         style="@style/tab_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         app:tabMode="scrollable" />
 
                 </LinearLayout>
@@ -63,7 +63,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginTop="104dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:visibility="gone" />
 
                 <ScrollView
 
@@ -72,7 +73,6 @@
                     android:layout_height="0dp"
                     android:layout_marginTop="56dp"
                     android:layout_weight="1"
-                    android:fillViewport="false"
                     android:scrollbars="none">
 
                 </ScrollView>
@@ -96,8 +96,7 @@
 
         android:layout_width="288dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:fitsSystemWindows="true">
+        android:layout_gravity="left">
 
         <android.support.design.widget.NavigationView
 
