--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -38,7 +38,7 @@
 
         <CheckBoxPreference
 
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="vibrate_only_during_classes"
             android:summary="Vibrate only unless silent mode is on"
             android:title="Vibrate only during classes" />
