--- a/app/src/main/res/layout-v24/view_notification.xml
+++ b/app/src/main/res/layout-v24/view_notification.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_notification_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="72dp"
     android:minHeight="72dp">
 
     <RelativeLayout
@@ -286,7 +286,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="12dp"
         android:layout_toRightOf="@id/view_notification_progress_layout"
-        android:paddingRight="70dp"
+        android:paddingRight="60dp"
         android:paddingTop="7.25dp">
 
         <TextView
