--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -56,7 +56,7 @@
                     android:layout_toRightOf="@id/add_class_name_icon"
                     android:hint="Name"
                     android:inputType="textCapWords"
-                    android:singleLine="true"
+                    android:maxLines="1"
                     android:textSize="16sp" />
 
             </RelativeLayout>
@@ -92,7 +92,7 @@
                     android:layout_toRightOf="@id/add_class_teacher_icon"
                     android:hint="Teacher (Optional)"
                     android:inputType="textCapWords"
-                    android:singleLine="true"
+                    android:maxLines="1"
                     android:textSize="16sp" />
 
             </RelativeLayout>
@@ -128,7 +128,7 @@
                     android:layout_toRightOf="@id/add_class_location_icon"
                     android:hint="Location (Optional)"
                     android:inputType="textCapWords"
-                    android:singleLine="true"
+                    android:maxLines="1"
                     android:textSize="16sp" />
 
             </RelativeLayout>
