--- a/app/src/main/res/layout/activity_add_homework.xml
+++ b/app/src/main/res/layout/activity_add_homework.xml
@@ -56,7 +56,7 @@
                     android:layout_toRightOf="@id/add_homework_name_icon"
                     android:hint="Name"
                     android:inputType="textCapWords"
-                    android:singleLine="true"
+                    android:maxLines="1"
                     android:textSize="16sp" />
 
             </RelativeLayout>
