--- a/app/src/main/res/layout/view_class_card.xml
+++ b/app/src/main/res/layout/view_class_card.xml
@@ -24,42 +24,6 @@
             android:layout_width="match_parent"
             android:layout_height="45dp">
 
-            <TextView
-
-                android:id="@+id/view_class_card_title_centered"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:textSize="18sp"
-                android:visibility="gone" />
-
-            <RelativeLayout
-
-                android:id="@+id/view_class_card_relative_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:visibility="gone">
-
-                <TextView
-
-                    android:id="@+id/view_class_card_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:visibility="gone" />
-
-                <TextView
-
-                    android:id="@+id/view_class_card_teacher_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/view_class_card_title"
-                    android:textSize="14sp"
-                    android:visibility="gone" />
-
-            </RelativeLayout>
-
             <ImageView
 
                 android:id="@+id/view_class_color_indicator"
@@ -68,6 +32,52 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:src="@drawable/color_indicator_class_card" />
+
+            <TextView
+
+                android:id="@+id/view_class_card_title_centered"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@id/view_class_color_indicator"
+                android:layout_centerVertical="true"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:paddingRight="48dp"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
+            <RelativeLayout
+
+                android:id="@+id/view_class_card_relative_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@id/view_class_color_indicator"
+                android:layout_centerVertical="true"
+                android:paddingRight="48dp"
+                android:visibility="gone">
+
+                <TextView
+
+                    android:id="@+id/view_class_card_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+
+                <TextView
+
+                    android:id="@+id/view_class_card_teacher_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/view_class_card_title"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textSize="14sp"
+                    android:visibility="gone" />
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
