--- a/app/src/main/res/layout/view_homework_list_section.xml
+++ b/app/src/main/res/layout/view_homework_list_section.xml
@@ -7,9 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="44dp"
     android:background="@android:color/transparent"
+    android:ellipsize="end"
     android:gravity="center_vertical"
+    android:maxLines="1"
     android:paddingLeft="16dp"
-    android:singleLine="true"
     android:textColor="#757575"
     android:textSize="15sp"
     android:textStyle="bold" />
