--- a/app/src/main/res/layout/view_spinner_item.xml
+++ b/app/src/main/res/layout/view_spinner_item.xml
@@ -5,7 +5,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:ellipsize="end"
     android:gravity="left"
+    android:maxLines="1"
     android:padding="5dp"
     android:textColor="#000000"
     android:textSize="16sp" />
