Added correct toolbar for ViewClass.

--- a/app/src/main/res/layout/activity_view_class.xml
+++ b/app/src/main/res/layout/activity_view_class.xml
@@ -10,7 +10,7 @@
     <include
 
         android:id="@+id/view_class_toolbar"
-        layout="@layout/view_toolbar" />
+        layout="@layout/view_toolbar_padded" />
 
     <ScrollView
 
