--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -29,6 +29,16 @@
             tools:columns="5"
             tools:dialogTitle="Choose a color" />
 
+        <com.afollestad.materialdialogs.prefs.MaterialListPreference
+
+            android:defaultValue="1"
+            android:entries="@array/days_of_week"
+            android:entryValues="@array/days_of_week_values"
+            android:key="first_day_of_week"
+            android:negativeButtonText=""
+            android:summary="Choose the first day working day of your week"
+            android:title="First day of week" />
+
         <CheckBoxPreference
 
             android:defaultValue="true"
