--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -11,14 +11,15 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="12dp">
 
         <android.support.v7.widget.CardView
 
             android:id="@+id/overview_no_classes_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="4dp"
             android:visibility="gone">
 
             <TextView
@@ -37,7 +38,7 @@
             android:id="@+id/overview_current_class_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="4dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             android:visibility="gone">
@@ -151,7 +152,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/overview_current_class_card"
-            android:layout_margin="16dp"
+            android:layout_margin="4dp"
             android:visibility="gone">
 
             <RelativeLayout
@@ -185,7 +186,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/overview_next_classes_card"
-            android:layout_margin="16dp"
+            android:layout_margin="4dp"
             android:visibility="gone">
 
             <RelativeLayout
