--- a/app/src/main/res/layout/activity_view_class.xml
+++ b/app/src/main/res/layout/activity_view_class.xml
@@ -16,7 +16,6 @@
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fillViewport="true"
         android:scrollbars="none">
@@ -42,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
-                    android:text="No classes to show."
+                    android:text="Class is not in timetable."
                     android:textSize="15sp" />
 
             </android.support.v7.widget.CardView>
@@ -53,8 +52,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:visibility="gone">
 
                 <RelativeLayout
