--- a/app/src/main/res/layout/view_class_list_child.xml
+++ b/app/src/main/res/layout/view_class_list_child.xml
@@ -5,12 +5,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="52dp"
+    android:background="#ffffff"
     android:layoutDirection="ltr"
     android:minHeight="52dp">
 
     <TextView
 
-        android:id="@+id/view_list_child_time"
+        android:id="@+id/view_class_list_child_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -19,10 +20,10 @@
 
     <TextView
 
-        android:id="@+id/view_list_child_text_centered"
+        android:id="@+id/view_class_list_child_text_centered"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@id/view_list_child_time"
+        android:layout_alignRight="@id/view_class_list_child_time"
         android:layout_centerVertical="true"
         android:ellipsize="end"
         android:maxLines="1"
@@ -32,17 +33,17 @@
 
     <RelativeLayout
 
-        android:id="@+id/view_list_child_relative_layout"
+        android:id="@+id/view_class_list_child_relative_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@id/view_list_child_time"
+        android:layout_alignRight="@id/view_class_list_child_time"
         android:layout_centerVertical="true"
         android:paddingRight="128dp"
         android:visibility="gone">
 
         <TextView
 
-            android:id="@+id/view_list_child_text"
+            android:id="@+id/view_class_list_child_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -52,10 +53,10 @@
 
         <TextView
 
-            android:id="@+id/view_list_child_teacher_location"
+            android:id="@+id/view_class_list_child_teacher_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/view_list_child_text"
+            android:layout_below="@id/view_class_list_child_text"
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="12sp"
