--- a/app/src/main/res/layout/fragment_homework.xml
+++ b/app/src/main/res/layout/fragment_homework.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/homework_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusableInTouchMode="true"
@@ -35,7 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:paddingBottom="4dp"
+        android:nestedScrollingEnabled="false"
+        android:paddingBottom="92dp"
         android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
