--- a/app/src/main/res/layout/view_homework_list_item.xml
+++ b/app/src/main/res/layout/view_homework_list_item.xml
@@ -1,71 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<FrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/view_homework_list_item_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="72dp"
-    android:background="@color/white"
-    android:clickable="true"
-    android:elevation="2dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:elevation="2dp">
 
-    <RelativeLayout
+    <FrameLayout
 
-        android:id="@+id/view_homework_list_item_color_indicator_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="16dp">
+        android:id="@+id/view_homework_list_item_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-        <ImageView
+        <RelativeLayout
 
-            android:id="@+id/view_homework_list_item_color_indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/color_indicator_homework" />
-
-        <ImageView
-
-            android:id="@+id/view_homework_list_item_priority_indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/priority" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@id/view_homework_list_item_color_indicator_layout"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:paddingRight="64dp">
-
-        <TextView
-
-            android:id="@+id/view_homework_list_item_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="#000000"
-            android:textSize="15sp" />
+            android:layout_height="match_parent">
 
-        <TextView
+            <RelativeLayout
 
-            android:id="@+id/view_homework_list_item_due"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/view_homework_list_item_name"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textSize="14sp" />
+                android:id="@+id/view_homework_list_item_color_indicator_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="16dp">
 
-    </RelativeLayout>
+                <ImageView
 
-</RelativeLayout>
+                    android:id="@+id/view_homework_list_item_color_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/color_indicator_homework" />
+
+                <ImageView
+
+                    android:id="@+id/view_homework_list_item_priority_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/priority" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@id/view_homework_list_item_color_indicator_layout"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:paddingRight="64dp">
+
+                <TextView
+
+                    android:id="@+id/view_homework_list_item_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
+
+                <TextView
+
+                    android:id="@+id/view_homework_list_item_due"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/view_homework_list_item_name"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textSize="14sp" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
+</FrameLayout>
