--- a/app/src/main/res/layout/view_homework_list_section.xml
+++ b/app/src/main/res/layout/view_homework_list_section.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView
+<FrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/view_homework_list_section_text_view"
     android:layout_width="match_parent"
-    android:layout_height="44dp"
-    android:background="@android:color/transparent"
-    android:ellipsize="end"
-    android:gravity="center_vertical"
-    android:maxLines="1"
-    android:paddingLeft="16dp"
-    android:textColor="#757575"
-    android:textSize="15sp"
-    android:textStyle="bold" />
+    android:layout_height="44dp">
+
+    <FrameLayout
+
+        android:id="@+id/view_homework_list_section_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+
+                android:id="@+id/view_homework_list_section_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:paddingLeft="16dp"
+                android:textColor="#757575"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
+</FrameLayout>
