--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,4 +53,6 @@
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
 
+    <color name="snackbar_action_color_done">#ffccccff</color>
+
 </resources>
