--- a/app/src/main/res/layout/fragment_homework.xml
+++ b/app/src/main/res/layout/fragment_homework.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<ScrollView
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/homework_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
+
+        android:id="@+id/homework_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.CardView
 
         android:id="@+id/homework_no_homework_card"
         android:layout_width="match_parent"
@@ -34,10 +39,13 @@
 
         android:id="@+id/homework_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
+        android:fitsSystemWindows="true"
         android:nestedScrollingEnabled="false"
         android:paddingBottom="116dp"
         android:visibility="gone" />
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
